--- a/package.json
+++ b/package.json
@@ -34,5 +34,29 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "@babel/core": "^7.23.3",
+    "@babel/preset-env": "^7.23.3",
+    "@babel/preset-react": "^7.23.3",
+    "ajv": "^7.2.4",
+    "babel-loader": "^9.1.3",
+    "babel-plugin-root-import": "^6.6.0",
+    "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^6.8.1",
+    "html-webpack-plugin": "^5.5.3",
+    "style-loader": "^3.3.3",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
+  },
+  "keywords": [
+    "Dictionary",
+    "Git",
+    "pwa",
+    "ssr",
+    "plugins",
+    "app"
+  ],
+  "author": "chandan Company, LLC"
 }
